<resources>
    <string name="app_name">TSP/PSP</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_time_log">TimeLogActivity</string>
    <string name="title_activity_defect_log">DefectLogActivity</string>

    <!-- Main Activity-->
    <string name="tvProyectoCreados">Proyectos Creados</string>
    <!-- AlertDialog (Main Activity) -->
    <string name="tv_alert_d_crear_proyecto">Crear Proyecto</string>
    <string name="et_alert_d_nombre_proyecto">Ingresa el nombre del Proyecto</string>
    <string name="btn_alert_d_registrar_proyecto">Registrar Proyecto</string>
    <string name="title_activity_project_register">ProjectRegisterActivity</string>
    <string name="tvTitleTimeLog">TimeLog</string>
    <string name="tvPhaseTL">Phase</string>
    <string name="tvStartTL">Start</string>
    <string name="btnIniciarTL">Iniciar</string>
    <string name="tvInterruptionTL">Interruption</string>
    <string name="tvStopTL">Stop</string>
    <string name="btnPararTL">Parar</string>
    <string name="tvCommentsTL">Comments</string>
    <string name="btnRegistrarTL">Registrar</string>
    <string name="etFechaInicioTL">Fecha Inicio</string>
    <string name="tvFechaFinalTL">Fecha Final</string>
    <string name="tvComentariosTL">Ingresa tus comentarios del Proyecto</string>
    <string name="tvInterrupcionesTL">Ingresa interrupciones</string>
    <!-- Defect Log-->
    <string name="tvTituloDefectLog">Defect Log</string>
    <string name="tvDateDefectLog">Date:</string>
    <string name="etFechaDefectLog">Text</string>
    <string name="btnFechaDefectLog">Obtener fecha</string>
    <string name="tvPhaseInjectedDefectLog">Phase Injected:</string>
    <string name="tvPhaseRemovedDefectLog">Phase Rejected:</string>
    <string name="tvFixTimeDefectLog">Fix Time:</string>
    <string name="tvTypeDefectLog">Type::</string>
    <string name="tvTiempoDefectLog">Tiempo</string>
    <string name="btnRestartDefectLog">Restart</string>
    <string name="btnStopDefectLog">Stop</string>
    <string name="btnStartDefectLog">Start</string>
    <string name="btnRegistrarDefectLog">Registrar</string>
    <string name="tvDescriptionDefectLog">Defect Description:</string>
    <string name="etMultiline">Name</string>

</resources>
